validations for signin register and events

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -61,13 +61,13 @@
   <div class="control-group">
      <label class="control-label" for="event_address_city">City:</label>
     <div class="controls" >
-      <input id="event_address_city" class="form-control" type="text" name="event[address_attributes][city]" >
+      <input id="address_city" class="form-control" type="text" name="event[address_attributes][city]" >
     </div>
   </div>
        <div class="control-group">
                   <label for="inputlogo" class="control-label">State :</label>
                   <div class="controls">
-                    <select class="form-control" name="event[address_attributes][state]" tabindex="9">
+                    <select class="form-control" id="address_state" name="event[address_attributes][state]" tabindex="9">
                       <option value="">Select</option>
                       <option value="Alabama">Alabama</option>
                       <option value="Alaska">Alaska</option>
@@ -136,7 +136,7 @@
           <div class="control-group">
                    <label class="control-label" for="event_state_date">Event Start's at:</label>
                 <div class='input-group date controls' id='datetimepicker1'>
-                   <input type='text' class="form-control" name="event[event_start_date]" />
+                   <input type='text' class="form-control" id="event_start_date" name="event[event_start_date]" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
@@ -144,21 +144,21 @@
          <div class="control-group">
                    <label class="control-label" for="event_end_date">Event End's at:</label>
                 <div class='input-group date controls' id='datetimepicker2'>
-                    <input type='text' class="form-control" name="event[event_end_date]" />
+                    <input type='text' id="event_end_date" class="form-control" name="event[event_end_date]" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
           </div>
 
   <div class="control-group" style= "margin-top:60px">
-    <%= f.submit class: "btn-sm new" %>
+    <input class="btn-sm new eventvalidate" name="commit" type="submit" id="eventValidate" value="Create Event" />
   </div>
 
    <div class="control-group">
     <div class="controls" >
       <input id="event_published" class="form-control" type="hidden" name="event[published]" value=true >
     </div>
-    <%= f.submit "Or Save as Draft", class: "btn btn-primary pull-right" %>
+     <input class="btn btn-primary pull-right eventvalidate" name="commit" type="submit" value="Or Save as Draft" />
   </div>
 </div>
 <% end %>
@@ -202,3 +202,70 @@ margin-bottom:12px;
                 $('#datetimepicker2').datetimepicker();                
             });
         </script>
+
+<script type="text/javascript">
+$(document).ready(function() {
+  $(".eventvalidate").click(function() {
+        var today = new Date();
+        var title = $('#event_title').val();
+        var description = CKEDITOR.instances.event_description.updateElement();
+        var desc = $('#event_description').val();
+        var address = $('#event_address_address').val();
+        var zipcode = $('#event_address_zipcode').val();
+        var state = $('#address_state').val();
+        var city = $('#address_city').val();
+        var zipRegex = /^\d{5}$/; 
+        var startDate = new Date($('#event_start_date').val());
+        var endDate = new Date($('#event_end_date').val());
+
+
+        if ($.trim(title).length == 0) {
+            alert('Please enter Title'); 
+            return false;
+        }
+        else if (desc == '') {
+            alert('Please enter Description'); 
+            return false;
+        }
+        else if ($.trim(address).length == 0) {
+            alert('Please enter Address'); 
+            return false;
+        }
+       else if (($.trim(zipcode).length == 0) || (!zipRegex.test(zipcode)))
+        {
+            alert("Enter a valid zipcode");
+            return false;
+        }
+        else if ($.trim(city).length == 0) {
+            alert('Please enter city'); 
+            return false;
+        }
+        else if (state.length == 0 || $(state).val() == "")
+        {
+            alert("Please select State");
+            return false;
+        }
+         else if (startDate < today){ 
+              alert('Start date must be today or later');
+              return false;
+            }
+        else if (endDate == "Invalid Date" || startDate == "Invalid Date"){ 
+              alert('Enter Start date and End date');
+              return false;
+            }
+        else if (startDate != '' && endDate !='') {
+           if (Date.parse(startDate) > Date.parse(endDate)) {
+               $("event_end_date").val('');
+               alert("Start date should not be greater than end date");
+               return false;
+           }
+           else if (Date.parse(startDate) < today){ 
+              alert('End date must be today or later');
+              return false;
+            }     
+       }
+       
+    });
+ 
+});
+</script>
