--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -20,7 +20,7 @@
           <div class="control-group">
            <label class="control-label" for="inputlogo">Password :</label>
            <div class="controls">
-            <input id="user[password]" class="form-control input-sm" type="password" name="user[password]" tabindex="4">
+            <input id="user_password" class="form-control input-sm" type="password" name="user[password]" tabindex="4">
           </div>
        </div>
   <% if @user %>          
@@ -37,7 +37,7 @@
       <div class="control-group">
         <label class="control-label" for="inputlogo">Zip Code :</label>
         <div class="controls">
-        <input id="user_address_zipcode" class="form-control input-sm" type="text" name="user[address_attributes][zipcode]" tabindex="10">
+        <input id="zipcode" class="form-control input-sm" type="text" name="user[address_attributes][zipcode]" tabindex="10">
       </div>
       </div>
 
@@ -56,7 +56,7 @@
             <div class="control-group">
               <label class="control-label" for="inputlogo">Verify Password :</label>
                 <div class="controls">
-                  <input type="password" name="user[password_confirmation]" id="user[password_confirmation]" class="form-control input-sm" tabindex="5">
+                  <input type="password" name="user[password_confirmation]" id="password_confirmation" class="form-control input-sm" tabindex="5">
                 </div>
             </div>
             <div class="control-group">
@@ -68,12 +68,12 @@
             <div class="control-group">
               <label class="control-label" for="inputlogo">Phone No :</label>
               <div class="controls">
-                <input type="text" name="user[address_attributes][phone_no]" id="address[phone_no]" class="form-control input-sm" tabindex="11">
+                <input type="text" name="user[address_attributes][phone_no]" id="user_phone1" class="form-control input-sm" tabindex="11">
               </div>
             </div>
             <br/>
             <br/>
-            <button class="btn-sm new" type="submit" tabindex="13">Submit</button>
+            <button class="btn-sm new" type="submit" id="testValidate" tabindex="13">Submit</button>
 
 </div>
 <div class="col-md-4 martop3  form-horizontal">
@@ -85,7 +85,7 @@
             <div class="control-group">
               <label class="control-label" for="inputlogo">Email :</label>
               <div class="controls">
-                <input type="text" name="user[email]" id="user[email]" class="form-control input-sm" tabindex="3">
+                <input type="text" name="user[email]" id="user_email1" class="form-control input-sm" tabindex="3">
               </div>
             </div>   
 
@@ -93,19 +93,19 @@
                   <label for="inputlogo" class="control-label">Role:</label>
                   <div class="controls">
                     <% if params[:role]=="host"%>
-                     <select class="form-control" name="role[role_id]" tabindex="9">                  
+                     <select class="form-control" name="role[role_id]" tabindex="6">                  
                       <option value="host">Host</option>
                       <option value="guest">Guest</option>
                       <option value="">Select</option>
                      </select>
                      <% elsif params[:role]=="guest" %>
-                    <select class="form-control" name="role[role_id]" tabindex="9">                  
+                    <select class="form-control" name="role[role_id]" tabindex="6">                  
                       <option value="guest">Guest</option>
                       <option value="host">Host</option>
                       <option value="">Select</option>
                      </select>
                      <% else %>
-                    <select class="form-control" name="role[role_id]" tabindex="9">
+                    <select class="form-control" id="role_dropdown" name="role[role_id]" tabindex="6">
                       <option value="">Select</option>
                       <option value="host">Host</option>
                       <option value="guest">Guest</option>
@@ -221,3 +221,61 @@ margin-bottom:12px;
     margin-left: 145px;
 }
 </style>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#testValidate').click(function() {
+        var sEmail = $('#user_email1').val();
+        var password = $('#user_password').val();
+        var password_confirm = $('#password_confirmation').val();
+        var mydropdown = $('#role_dropdown').val();
+        var zip = $('#zipcode').val();
+        var zipRegex = /^\d{5}$/;   
+        var pattern = /^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$/;
+        var phone = $('#user_phone1').val();
+        var phoneno = /^[0-9-+]+$/;
+
+
+        if ($.trim(sEmail).length == 0) {
+            alert('Please enter valid email address'); 
+            return false;
+        }
+        else if (!pattern.test(sEmail))
+        {
+            alert("Enter valid Email Address");
+            return false;
+        }
+        else if ($.trim(password).length == 0) {
+            alert('Please enter password'); 
+            return false;
+        }
+        else if ($.trim(password_confirm).length == 0) {
+           alert('Please enter verify password');
+            return false;
+        } 
+        else if (password != password_confirm ) {
+            alert('Password does not match with verify password');
+            return false;
+        }
+        else if (mydropdown.length == 0 || $(mydropdown).val() == "")
+        {
+            alert("Please select Role");
+            return false;
+        }
+        else if (!zipRegex.test(zip))
+        {
+            alert("Enter valid zipcode");
+            return false;
+        }
+         else if (!phoneno.test(phone)){ 
+            alert("Enter valid Phone number");
+            return false;
+        }
+        else {
+            return true;
+        }
+    });   
+});
+
+
+</script>
