--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -55,9 +55,15 @@
    });
 
 </script>
+ <style>
+      td p img {
+        display:none;
+      }
+      td p object{
+        display:none;
+      }
 
-<style>
+
+
 p { display : inline; }
-
 </style>
-
