working save and publish

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -151,13 +151,10 @@
           </div>
 
   <div class="control-group" style= "margin-top:60px">
-    <input class="btn-sm new eventvalidate" name="commit" type="submit" id="eventValidate" value="Create Event" />
+    <input class="btn-sm new eventvalidate" name="commit" type="submit" id="eventValidate" value="Publish" />
   </div>
 
    <div class="control-group">
-    <div class="controls" >
-      <input id="event_published" class="form-control" type="hidden" name="event[published]" value=true >
-    </div>
      <input class="btn btn-primary pull-right eventvalidate" name="commit" type="submit" value="Or Save as Draft" />
   </div>
 </div>
