Changed Fancybox in signin

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -125,9 +125,9 @@
               </thead>
               <tbody>
                 <tr><td>
-              <button class="btn btn-default" data-toggle="modal" data-target="#myModal"> Upload Pictures</button>
-                <button type=" " class="btn btn-default">Upload Video</button>
-                <button type=" " class="btn btn-default">Upload Audio</button>
+              <button class="btn btn-default uploadmedia"> Upload Pictures</button>
+                <button class="btn btn-default">Upload Video</button>
+                <button class="btn btn-default">Upload Audio</button>
                 </td></tr>
                 <tr><td><strong>Existing Media</strong></td></tr>
                 <tr>
@@ -152,52 +152,7 @@
                 <tr><td>&nbsp;</td></tr>
               </tbody>
              </table>
-          </div>
-       
-
-<a href="#video" data-toggle="modal" id="clickForVideo">
-  Click Me
-</a>
-
-<div class="modal fade" id="video" role="dialog" style="display:none;">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body modal-video">
-        
-        <video width="320" height="240" controls>
-
-  <source src="/uploads/ckeditor/attachments/48/myvideo.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video> 
-        <video width="320" height="240" controls>
-
-  <sourcesrc="/uploads/ckeditor/attachments/46/HTML5_video_tutorial__Creating_a_WebM_video___lynda.com.flv" type="video/x-flv">
-  Your browser does not support the video tag.
-</video> 
-
-      </div>
-      <button type="button" class="btn modal-close" data-dismiss="modal">X</button>
-    </div>
-  </div>
-</div>
-
-
-
-<script>
-
-$(document).on("click", '#clickForVideo', function() {
-  $('#video').modal('show');
-  $(".modal-video").fitVids();
-});
-</script>
-
-
-
-
-
-
-             
-    
+          </div>                 
         </div> <!-- Row closing -->   
 
      <%= render partial: "layouts/dash_board/sidebar_bottom"%>
@@ -209,7 +164,14 @@ $(document).on("click", '#clickForVideo', function() {
 <script>
 jQuery(function() {
   $("a.fancybox").fancybox();
+
+$(".uploadmedia").click(function(){
+  $("#myModal").modal("show");
 });
+
+
+});
+
 </script>
 <style>
       td p img {
