--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -126,25 +126,27 @@
               <tbody>
                 <tr><td>
               <button class="btn btn-default uploadmedia"> Upload Pictures</button>
-                <button class="btn btn-default">Upload Video</button>
+                <button class="btn btn-default uploadvideo">Upload Video</button>
                 <button class="btn btn-default">Upload Audio</button>
                 </td></tr>
                 <tr><td><strong>Existing Media</strong></td></tr>
                 <tr>
                 <td style="background:#434655; color:#c16429;">
                   <table>
-
                     <tr>
                     <% @event.pictures.each do |image| %>
-                      <%= link_to image_tag( image.url_thumb, :height => '120', :weight => '160', class:'check'),image.url,  {:class => 'fancybox-group thumb', rel: "group1"} %>
+                      <%= link_to image_tag( image.url_thumb, :height => '120', :weight => '160', class:'check'),"/jwplayer.swf?file="+image.url,  {:class => 'fancybox-group thumb', rel: "group1"} %>
                     <% end %>
                     </tr>
-
                     <tr>
+
                     <% @event.attachments.each do |image| %>
-                      <embed src="<%= image.url%>" autoplay="false" id="video"> 
-                    </tr>
-                 <% end %>
+                     <span>
+                      <div style="display:inline-block;position:absolute;padding-top:30px;padding-left:60px;color:black;"><h1>&#9658; </h1></div>
+                      <%= link_to image_tag("#{File.dirname(image.url)}/#{File.basename(image.url,'.*')}.jpg" , :height => '120', :weight => '160', class:'check'), image.url,  {:class => 'fancybox'} %>
+                      </span>
+                                 <% end %>
+                     </tr>
                   </table>
                 </td>
                 </tr>
@@ -154,27 +156,44 @@
              </table>
           </div>                 
         </div> <!-- Row closing -->   
+                      
+
+
+      <script>
+$(document).ready(function() {
+    $("a.fancybox").fancybox({
+        width : 380, // or whatever
+        height: 280,
+        type: "iframe"
+    })
+})
+  </script>
+
+
+
+ <script>
+jQuery(function() {
+$(".uploadmedia").click(function(){
+  $("#myModal").modal("show");
+});
+$(".uploadvideo").click(function(){
+  $("#myVideo").modal("show");
+});
+
+});
+</script>
+
 
      <%= render partial: "layouts/dash_board/sidebar_bottom"%>
 
     <%= render partial: "layouts/dash_board/image_upload"%>
 
+    <%= render partial: "layouts/dash_board/video_upload"%>
 
 
-<script>
-jQuery(function() {
-$(".uploadmedia").click(function(){
-  $("#myModal").modal("show");
-});
-
-$("#video").click(function(){
-  $("#video_modal").modal("show");
-});
 
 
-});
 
-</script>
 <style>
       td p img {
         display:none;
@@ -198,5 +217,5 @@ $("a.fancybox-group").fancybox({
     'speedIn'   : 600, 
     'speedOut'    : 200, 
     'overlayShow' : false
-  });</script>
-
+  });
+</script>
